# album-tracker-api

./: .env.placeholder  .gitignore  Dockerfile  compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2026_05_05_2017-3cc7be3cdaaf_initial_migration_with_auth.py  2026_05_10_1816-fa8af8c19c94_album_and_collection_related_models.py
src/album_tracker_api/: main.py
src/album_tracker_api/core/: __init__.py  config.py
src/album_tracker_api/db/: database.py
src/album_tracker_api/dependencies/: __init__.py  db.py  user.py
src/album_tracker_api/handlers/: __init__.py  albums.py  auth.py  collections.py
src/album_tracker_api/handlers/auth/: __init__.py  login_handler.py  refresh_handler.py  register_handler.py  utils.py
src/album_tracker_api/models/: __init__.py  album.py  base.py  collection.py  user.py
src/album_tracker_api/routers/: __init__.py  admin.py  albums.py  auth.py  collections.py  health.py  users.py
src/album_tracker_api/schemas/: __init__.py  base.py
src/album_tracker_api/schemas/albums/: __init__.py  album.py  card.py  section.py
src/album_tracker_api/schemas/auth/: __init__.py  common.py  login.py  register.py
src/album_tracker_api/schemas/collections/: __init__.py  collection.py
src/album_tracker_api/schemas/health/: __init__.py  healthcheck.py
src/album_tracker_api/schemas/users/: __init__.py  me.py
