[project]
name = "album-tracker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel Saidman", email = "ezemati1904@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
album-tracker-api = "album_tracker_api.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
